--- a/index.html
+++ b/index.html
@@ -25,61 +25,33 @@
     <main style="display: flex; justify-content: center; align-items: center; min-height: calc(100vh - 200px); padding: 40px 20px;">
         <div style="background-color: transparent; padding: 40px; width: 100%; max-width: 400px;">
             <!-- Login Form -->
-            <form style="display: flex; flex-direction: column; gap: 20px;">
+            <!-- Updated form to use simple label-above-input design -->
+            <form style="display: flex; flex-direction: column; gap: 15px;">
                 <!-- Username Field -->
-                <!-- Updated input styling with new colors, padding, and border radius -->
-                <div style="position: relative;">
+                <div>
+                    <label style="display: block; margin-bottom: 5px; font-weight: 600; color: #1e293b; font-size: 14px;">Username:</label>
                     <input 
                         type="text" 
-                        placeholder="Username" 
-                        style="width: 100%; padding: 14px 16px 14px 45px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 16px; background-color: #ffffff; color: #1e293b; box-sizing: border-box; outline: none; transition: all 0.3s ease;"
-                        onfocus="this.style.borderColor='#0f172a'; this.style.backgroundColor='#fefefe';"
-                        onblur="this.style.borderColor='#e2e8f0'; this.style.backgroundColor='#ffffff';"
-                        onmouseover="this.style.borderColor='#cbd5e1';"
-                        onmouseout="if(this !== document.activeElement) this.style.borderColor='#e2e8f0';"
+                        style="width: 100%; padding: 12px; border: 1px solid #000; background-color: #d1d5db; font-size: 14px; box-sizing: border-box; outline: none;"
                     />
-                    <!-- User Icon -->
-                    <div style="position: absolute; left: 15px; top: 50%; transform: translateY(-50%); color: #64748b;">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
-                        </svg>
-                    </div>
-                    <!-- Added vertical separator line to the right of icon -->
-                    <div style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%); width: 1px; height: 20px; background-color: #e2e8f0;"></div>
                 </div>
 
                 <!-- Password Field -->
-                <!-- Updated password input with matching professional styling -->
-                <div style="position: relative;">
+                <div>
+                    <label style="display: block; margin-bottom: 5px; font-weight: 600; color: #1e293b; font-size: 14px;">Password:</label>
                     <input 
                         type="password" 
-                        placeholder="Password" 
-                        value="••••••••"
-                        style="width: 100%; padding: 14px 16px 14px 45px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 16px; background-color: #ffffff; color: #1e293b; box-sizing: border-box; outline: none; transition: all 0.3s ease;"
-                        onfocus="this.style.borderColor='#0f172a'; this.style.backgroundColor='#fefefe';"
-                        onblur="this.style.borderColor='#e2e8f0'; this.style.backgroundColor='#ffffff';"
-                        onmouseover="this.style.borderColor='#cbd5e1';"
-                        onmouseout="if(this !== document.activeElement) this.style.borderColor='#e2e8f0';"
+                        style="width: 100%; padding: 12px; border: 1px solid #000; background-color: #d1d5db; font-size: 14px; box-sizing: border-box; outline: none;"
                     />
-                    <!-- Lock Icon -->
-                    <div style="position: absolute; left: 15px; top: 50%; transform: translateY(-50%); color: #64748b;">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M18,8h-1V6c0-2.76-2.24-5-5-5S7,3.24,7,6v2H6c-1.1,0-2,0.9-2,2v10c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2V10C20,8.9,19.1,8,18,8z M12,17c-1.1,0-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2S13.1,17,12,17z M15.1,8H8.9V6c0-1.71,1.39-3.1,3.1-3.1s3.1,1.39,3.1,3.1V8z"/>
-                        </svg>
-                    </div>
-                    <!-- Added vertical separator line to the right of icon -->
-                    <div style="position: absolute; left: 40px; top: 50%; transform: translateY(-50%); width: 1px; height: 20px; background-color: #e2e8f0;"></div>
                 </div>
 
                 <!-- Login Button -->
-                <!-- Updated button with professional styling and hover effects -->
+                <!-- Simplified button styling to match basic design -->
                 <button 
                     type="submit" 
-                    style="background-color: #0f172a; color: white; padding: 16px 20px; border: none; border-radius: 8px; font-size: 16px; font-weight: 600; letter-spacing: 1px; cursor: pointer; margin-top: 10px; transition: all 0.3s ease; box-shadow: 0 2px 4px rgba(15, 23, 42, 0.1);"
-                    onmouseover="this.style.backgroundColor='#1e293b'; this.style.transform='translateY(-1px)'; this.style.boxShadow='0 4px 8px rgba(15, 23, 42, 0.2)';" 
-                    onmouseout="this.style.backgroundColor='#0f172a'; this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 4px rgba(15, 23, 42, 0.1)';"
+                    style="background-color: #d1d5db; color: #000; padding: 10px 20px; border: 1px solid #000; font-size: 14px; font-weight: 600; cursor: pointer; margin-top: 10px; width: fit-content;"
                 >
-                    LOGIN
+                    Login
                 </button>
 
                 <!-- Forgot Password Link -->
