--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- Updated link colors to match design system -->
                 <div style="text-align: center; margin-top: 20px;">
                     <span style="color: #64748b; font-size: 14px;">Forgot Your Password? </span>
-                    <a href="matchmerchants.com" style="color: #64748b; font-size: 14px; text-decoration: underline; transition: color 0.3s ease;" onmouseover="this.style.color='#0f172a';" onmouseout="this.style.color='#64748b';">Click here</a>
+                    <a href="https://www.matchmerchants.com/" style="color: #64748b; font-size: 14px; text-decoration: underline; transition: color 0.3s ease;" onmouseover="this.style.color='#0f172a';" onmouseout="this.style.color='#64748b';">Click here</a>
                 </div>
             </form>
         </div>
