--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merchant Back Office - Login</title>
+    <title>Affiliate Login</title>
 </head>
 <!-- Updated body styling to match reference design with Inter font and new background color -->
 <body style="margin: 0; padding: 0; font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background-color: #f8fafc; color: #1e293b; line-height: 1.6; min-height: 100vh;">
@@ -14,7 +14,7 @@
         
         <!-- Updated title with larger font size, bold weight, and decorative underline -->
         <h1 style="color: white; margin: 0; font-size: 36px; font-weight: 700; letter-spacing: 1px; margin-bottom: 20px; position: relative; display: inline-block;">
-            Merchant Back Office
+            Affiliate Login
         </h1>
         
         <!-- Made decorative line more prominent and white -->
